--- a/server/statefulset.yml
+++ b/server/statefulset.yml
@@ -67,13 +67,13 @@ spec:
                 - -e
                 - exec mysqladmin status -uroot -p${MARIADB_ROOT_PASSWORD}
 
-          resources:
-            requests:
-              cpu: 250m
-              memory: 256Mi
-            limits:
-              cpu: 500m
-              memory: 512Mi
+          # resources:
+          #   requests:
+          #     cpu: 250m
+          #     memory: 256Mi
+          #   limits:
+          #     cpu: 500m
+          #     memory: 512Mi
 
           volumeMounts:
             - name: config
