--- a/server/kustomization.yml
+++ b/server/kustomization.yml
@@ -3,20 +3,42 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - serviceaccount.yml
   - service.yml
   - statefulset.yml
 
-commonLabels:
-  app.kubernetes.io/component: server
-
 configMapGenerator:
   - name: mariadb-config
-    files: []
+    options:
+      labels:
+        app.kubernetes.io/name: mariadb
+        app.kubernetes.io/component: server
+    literals: []
   - name: mariadb-init
-    files: []
+    options:
+      labels:
+        app.kubernetes.io/name: mariadb
+        app.kubernetes.io/component: server
+    literals: []
   - name: mariadb-server
+    options:
+      labels:
+        app.kubernetes.io/name: mariadb
+        app.kubernetes.io/component: server
     literals:
       - MARIADB_DATABASE=test
+
+secretGenerator:
+  - name: mariadb-admin
+    options:
+      labels:
+        app.kubernetes.io/name: mariadb
+        app.kubernetes.io/component: server
+    files: []
+  - name: mariadb-user
+    options:
+      labels:
+        app.kubernetes.io/name: mariadb
+        app.kubernetes.io/component: server
+    files: []
 
 ...
