--- a/server/statefulset.yml
+++ b/server/statefulset.yml
@@ -4,20 +4,31 @@ kind: StatefulSet
 
 metadata:
   name: mariadb-server
+  labels:
+    app.kubernetes.io/name: mariadb
+    app.kubernetes.io/component: server
 
 spec:
   replicas: 1
-
   serviceName: mariadb-server
   podManagementPolicy: Parallel
 
   updateStrategy:
     type: RollingUpdate
 
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: mariadb
+      app.kubernetes.io/component: server
+
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: mariadb
+        app.kubernetes.io/component: server
+
     spec:
-      serviceAccountName: mariadb-server
-      enableServiceLinks: true
+      enableServiceLinks: false
       restartPolicy: Always
       terminationGracePeriodSeconds: 60
 
@@ -66,14 +77,6 @@ spec:
                 - -c
                 - -e
                 - exec mysqladmin status -uroot -p${MARIADB_ROOT_PASSWORD}
-
-          # resources:
-          #   requests:
-          #     cpu: 250m
-          #     memory: 256Mi
-          #   limits:
-          #     cpu: 500m
-          #     memory: 512Mi
 
           volumeMounts:
             - name: config
